# mawdoo3_gaming

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Makefile  PROJECT_OVERVIEW.md  README.md  cloudbuild.yaml
services/generation-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/generation-service/scripts/: provision_db.sql  seed_demo.py
services/generation-service/src/generation_service/: __init__.py  __main__.py  container.py  main.py
services/generation-service/src/generation_service/api/: deps.py  errors.py  schemas.py  security.py
services/generation-service/src/generation_service/api/routes/: games.py  (+3 more)
services/generation-service/src/generation_service/application/: events.py  job_runner.py
services/generation-service/src/generation_service/config/: __init__.py  settings.py
services/generation-service/src/generation_service/domain/: blueprint.py  constraints.py  entities.py  errors.py  events.py  ports.py
services/generation-service/src/generation_service/infrastructure/: images.py
services/generation-service/src/generation_service/observability/: __init__.py  logging.py
services/generation-service/tests/: conftest.py  test_app_boot.py  test_assembler.py  test_best_effort.py  test_blueprint.py  test_clarify_api.py  test_draft_events_cover_api.py  test_edit_prompts.py  test_events.py  test_llm.py  test_local_storage.py  test_pipeline.py  test_quality_gate.py  test_review_fixes.py  test_review_verdict.py  test_service_qa.py  test_source_edit_api.py  test_tweak_image_api.py  test_tweaks_api.py  test_versions_api.py
(+337 files in other folders)
