[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generation-service"
version = "0.1.0"
description = "Prompt-to-Game generation service: LangGraph pipeline, quality gate, packaging, storage, and the games API."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "anthropic>=0.40",
    "asyncpg>=0.29",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/generation_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
